# floorplan-generator-next

./: .gitignore  README.md  pyproject.toml
docs/: algorithm-greedy-csp.md  apartment-planning-rules.md  equipment-furniture-rules.md  functional-requirements.md  plan-analysis-report.md  rules.docx
docs/plans/: 2026-02-23-phase1-foundation-design.md  2026-02-23-phase1-foundation-implementation.md  2026-02-23-phase2-rules-design.md  2026-02-23-phase2-rules-implementation.md  2026-02-23-phase3-generator-design.md  2026-02-23-phase3-generator-implementation.md  2026-02-23-phase4-svg-renderer-design.md  2026-02-23-phase4-svg-renderer-implementation.md  2026-02-23-visual-quality-design.md  2026-02-23-visual-quality-impl.md  2026-02-23-visual-quality-v2-design.md  2026-02-23-visual-quality-v2-implementation.md  2026-02-24-gap-analysis-report.md  2026-02-24-gap-fixes-implementation.md  2026-02-24-wall-window-fix-design.md  2026-02-24-wall-window-fix-implementation.md
src/floorplan_generator/: __init__.py  cli.py
src/floorplan_generator/core/: dimensions.py  enums.py  geometry.py  models.py
src/floorplan_generator/generator/: __init__.py  factory.py  layout_engine.py  room_composer.py  types.py
src/floorplan_generator/renderer/: __init__.py  door_renderer.py  (+13 more)
tests/: conftest.py
tests/integration/: test_greedy_csp_integration.py  test_placement_quality.py  test_renderer_integration.py  test_svg_structure.py
tests/unit/: test_csp.py  test_furniture_rules.py  test_geometry.py  test_greedy.py  test_models.py  test_outline.py  test_planning_rules.py  test_renderer.py
(+33 files in other folders)
